Revision history for Perl extension Metabrik.

1.12
   - FEATURE: core::global: repository Attribute to store default Briks repository
   - UPDATE: Metabrik: brik_preinit, brik_init and brik_fini are now official Commands
   - bugfix: shell::rc, shell::script: add a trailing whitespace on multilines
   - new: perl::module: use_test Attribute to activate test on module installation
   - update: perl::module: install correctly supports ARRAY of modules to install

1.11 Sun Nov 22 17:46:43 CET 2015
   - FEATURE: core::shell: auto prefix by run if entered command is a used Brik
              example:          perl::module install Class::Gomor
              is equivalent to: run perl::module install Class::Gomor
   - FEATURE: Metabrik: brik_author and brik_license Commands and Properties
   - FEATURE: Metabrik: auto tagging of Briks based on Repository, Category and Name
   - FEATURE: Metabrik: optional_modules and optional_binaries Properties.
              Also added brik_has_binary and brik_has_module Commands.
   - new: core::context: get_used Command to return a reference to a used Brik
   - new: brik::search: command Command to search a Brik by existing Commands
   - bugfix: shell::script: allow blank lines and comments
   - bugfix: core::shell: correctly stop a run Command on SIGINT
   - bugfix: Metabrik: return error and not info on bad usage for some brik_has_* Commands
   - bugfix: Metabrik: correctly call brik_fini on core::context exiting

1.10 Tue Oct 27 20:13:36 CET 2015
   - FEATURE: core::context: allows to pass complex structs arguments to run and set Commands
     Example: run network::arp scan $info->{subnet}
   - FEATURE: core::context: allows also to execute Perl code within an Argument of a 
     run Command
     Example: run client::dns ptr_lookup "[ map { @$_ } values %$RUN ]"
   - FEATURE: core::shell: allows to complete aliases (can be disabled via
     aliases_completion Attribute