@@ -1,6 +1,9 @@
 Revision history for Perl extension Metabrik.
 
 1.12
+   - FEATURE: core::context: allow one-liners with a Brik Command. Example:
+     perl -MMetabrik::Core::Context -e 'Metabrik::Core::Context->new_brik_run("client::dns", "mx_lookup", "gmail.com")'
+   - FEATURE: core::context: allow to pass Code, ARRAY or HASH as Argument to set Command
    - FEATURE: core::global: repository Attribute to store default Briks repository
    - UPDATE: Metabrik: brik_preinit, brik_init and brik_fini are now official Commands
    - bugfix: shell::rc, shell::script: add a trailing whitespace on multilines
